--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@types/three": "^0.160.0",
     "formik": "^2.4.5",
     "howler": "^2.2.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-howler": "^5.2.0",
     "react-router-dom": "^6.21.2",
     "three": "^0.160.1",
     "uuid": "^9.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
