--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
-    "@react-spring/web": "^9.7.3",
+    "@react-spring/web": "^9.7.4",
     "@react-three/drei": "^9.96.4",
-    "@react-three/fiber": "^8.15.15",
-    "@react-three/postprocessing": "^2.15.11",
+    "@react-three/fiber": "^8.17.7",
+    "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.160.0",
-    "formik": "^2.4.5",
+    "formik": "^2.4.6",
     "howler": "^2.2.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-merge-refs": "^2.1.1",
+    "react-router-dom": "^6.26.2",
     "three": "^0.160.1",
     "uuid": "^9.0.1",
-    "yup": "^1.3.3",
-    "zustand": "^4.5.2"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
@@ -40,6 +41,7 @@
     "postcss": "^8.4.33",
     "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vite-plugin-filter-replace": "^0.1.13"
   }
 }
