--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.12.1",
+    "@emailjs/browser": "^4.4.1",
     "@react-spring/web": "^9.7.4",
-    "@react-three/drei": "^9.96.4",
+    "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.7",
     "@react-three/postprocessing": "^2.16.2",
-    "@types/three": "^0.160.0",
+    "@types/three": "^0.168.0",
     "formik": "^2.4.6",
     "howler": "^2.2.4",
     "prop-types": "^15.8.1",
@@ -23,25 +23,24 @@
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.1.1",
     "react-router-dom": "^6.26.2",
-    "three": "^0.160.1",
-    "uuid": "^9.0.1",
+    "three": "^0.168.0",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.33",
-    "sass": "^1.69.7",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11",
-    "vite-plugin-filter-replace": "^0.1.13"
+    "postcss": "^8.4.47",
+    "sass": "^1.79.3",
+    "tailwindcss": "^3.4.12",
+    "vite": "^5.4.7"
   }
 }
