--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-spring/three": "^9.7.4",
     "@react-spring/web": "^9.7.4",
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.7",
