--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.7",
     "@react-three/postprocessing": "^2.16.2",
-    "@types/three": "^0.168.0",
+    "@studio-freight/lenis": "^1.0.27",
     "formik": "^2.4.6",
     "howler": "^2.2.4",
     "prop-types": "^15.8.1",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.168.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.0.0",
@@ -42,6 +43,7 @@
     "postcss": "^8.4.47",
     "sass": "^1.79.3",
     "tailwindcss": "^3.4.12",
-    "vite": "^5.4.7"
+    "vite": "^5.4.7",
+    "vite-plugin-filter-replace": "^0.1.13"
   }
 }
