--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.168.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@yushijinhun/three-minifier-rollup": "^0.4.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.36.1",
