--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.1.1",
+    "lightningcss": "^1.30.2",
     "postcss": "^8.4.47",
     "sass": "^1.79.3",
     "tailwindcss": "^3.4.12",
