--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "redirects": [
+    {
+      "source": "/:path+/",
+      "destination": "/:path+",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
@@ -9,14 +16,13 @@
     {
       "source": "/(assets|draco|environments|favicon|fonts|svg|textures)/(.*)",
       "headers": [
-        {
-          "key": "CDN-Cache-Control",
-          "value": "public, max-age=31536000"
-        },
+        { "key": "CDN-Cache-Control", "value": "public, max-age=31536000" },
         {
           "key": "Cache-Control",
           "value": "public, immutable, max-age=31536000"
-        }
+        },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" }
       ]
     }
   ]
